<resources>
    <string name="app_name">EL Mobile</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name…</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="explore">EXPLORE</string>
    <string name="exams">EXAMS</string>
    <string name="forums">FORUMS</string>
    <string name="courses">COURSES</string>
    <string name="assessment">ASSESSMENT</string>
    <string name="welcome_message">Welcome to our e-learning network. If you have never used this application before press the sign up button to register. Otherwise press the login button to sign in with your email and password.</string>
    <string name="e_learning">E-LEARNING</string>
    <string name="first_name">First Name…</string>
    <string name="last_name">Last Name…</string>
    <string name="i_am_a_teacher">I am a teacher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review">REVIEW</string>
    <string name="image_description">image</string>
    <string name="attempt_exam">ATTEMPT</string>
    <string name="my_profile">My Profile</string>
    <string name="new_forum">NEW FORUM</string>
    <string name="new_exam">NEW EXAM</string>
    <string name="new_course">NEW COURSE</string>
    <string name="search_bar_text">Search...</string>
    <string name="search">SEARCH</string>
    <string name="my_courses">My Courses</string>
    <string name="reviews">Reviews</string>
    <string name="course_activities">Course activities</string>
    <string name="exam_name">Exam name</string>
    <string name="duration_90min">Duration: 90min</string>
    <string name="status_open">status: open</string>
    <string name="user_name">user name</string>
    <string name="forum_question">forum question</string>
    <string name="_1_attempts">1 attempts</string>
    <string name="_30_30">30/30</string>
    <string name="topic_name">Topic name</string>
    <string name="pdf">pdf</string>
    <string name="material_name">Marerial name</string>
    <string name="download">DOWNLOAD</string>
    <string name="_1">1.</string>
    <string name="question">question</string>
    <string name="choice_x">Choice x</string>
    <string name="course_name">Course name</string>
    <string name="teacher_name">Teacher name</string>
    <string name="unenroll">UNENROLL</string>
    <string name="open">OPEN</string>
</resources>
