<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_back"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/egg_tabs" />

        <ImageView
            android:id="@+id/u_ic"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:src="@drawable/ic_account_circle"
            android:layout_below="@id/tool_bar"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/u_ic"
            android:hint="@string/first_name"
            android:layout_margin="11dp"
            android:autofillHints=""
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_first_name"
            android:hint="@string/last_name"
            android:layout_margin="11dp"
            android:autofillHints=""
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_last_name"
            android:hint="@string/email"
            android:layout_margin="11dp"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email"
            android:hint="@string/password"
            android:layout_margin="11dp"
            android:autofillHints=""
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:hint="@string/confirm_password"
            android:layout_margin="11dp"
            android:autofillHints=""
            android:inputType="textPassword" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/teacher_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_teacher"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/confirm_password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teacher_check"
            android:layout_alignParentEnd="true"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:background="@drawable/round_buttons"
            android:layout_margin="11dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


</ScrollView>