<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_back"
    tools:context=".WelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp">

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/e_learning_ic_dark"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/welcome" />

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_learning"
            android:textSize="36sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/welcome_logo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textColor="@android:color/black"
            android:layout_below="@id/welcome_title"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@drawable/round_buttons"
            android:layout_below="@id/welcome_message"
            android:layout_margin="11dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:background="@drawable/round_buttons"
            android:layout_below="@id/welcome_message"
            android:layout_margin="11dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


</ScrollView>