<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_avatar_card"
            app:cardCornerRadius="16dp"
            android:layout_width="33dp"
            android:layout_height="33dp">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@color/image_back"
                android:contentDescription="@string/first_name" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="6sp"
            android:layout_toRightOf="@id/user_avatar_card"
            tools:ignore="SmallSp"
            android:layout_toEndOf="@id/user_avatar_card" />

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/forum_question"
            android:textSize="6sp"
            android:layout_toRightOf="@id/user_avatar_card"
            android:layout_below="@id/user_name"
            android:padding="1dp"
            tools:ignore="SmallSp"
            android:layout_toEndOf="@id/user_avatar_card" />

        <TextView
            android:id="@+id/forum_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_attempts"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/user_name"
            android:textSize="6sp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap,SmallSp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>