<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="9dp"
    app:cardCornerRadius="9dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/course_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:padding="9dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/exam_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exams"
            android:layout_below="@id/course_name_view"
            android:textSize="9sp"
            android:padding="9dp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/exam_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30/30"
            android:padding="9dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/review_button"
            android:layout_toStartOf="@id/review_button" />

        <Button
            android:id="@+id/review_button"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:text="@string/review"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>