<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="9dp"
    app:cardCornerRadius="9dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/course_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:padding="6dp" />

        <TextView
            android:id="@+id/exam_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exams"
            android:layout_below="@id/course_name_view"
            android:textSize="9sp"
            android:padding="6dp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/exam_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Duration: 90min"
            android:padding="6dp"
            android:layout_below="@id/exam_name_view"/>

        <TextView
            android:id="@+id/exam_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="status: open"
            android:padding="6dp"
            android:layout_below="@id/exam_name_view"
            android:layout_toRightOf="@id/exam_duration"
            android:layout_toEndOf="@id/exam_duration" />

        <Button
            android:id="@+id/review_button"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:text="@string/attempt_exam"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>