<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp">

        <TextView
            android:id="@+id/q_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:padding="6dp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:padding="6dp"
            android:layout_toEndOf="@id/q_number"
            android:layout_toRightOf="@id/q_number" />

        <RadioGroup
            android:id="@+id/choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:padding="11dp">

            <RadioButton
                android:id="@+id/choice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/choice_x" />

            <RadioButton
                android:id="@+id/choice2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/choice_x" />

            <RadioButton
                android:id="@+id/choice3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/choice_x" />

            <RadioButton
                android:id="@+id/choice4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/choice_x" />

        </RadioGroup>

    </RelativeLayout>

</androidx.cardview.widget.CardView>