<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_back"
    tools:context=".CourseViewActivity">
    
    <ImageView
        android:id="@+id/course_avatar"
        android:background="@color/image_back"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_courses" />

    <TextView
        android:id="@+id/one_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:padding="11dp"
        android:layout_toEndOf="@id/course_avatar"
        android:layout_toRightOf="@id/course_avatar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/teacher_avatar_card"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_margin="7dp"
        android:layout_below="@id/one_course_name"
        android:layout_toRightOf="@id/course_avatar"
        android:layout_toEndOf="@id/course_avatar"
        app:cardCornerRadius="11dp">

        <ImageView
            android:id="@+id/teacher_avatar"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_margin="6dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_circle"
            android:background="@color/image_back"
            android:contentDescription="@string/image_description" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_name"
        android:padding="9dp"
        android:layout_alignBottom="@id/teacher_avatar_card"
        android:layout_toRightOf="@id/teacher_avatar_card"
        android:layout_toEndOf="@id/teacher_avatar_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topics_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_avatar" />

</RelativeLayout>